我的日期控件
我把index.html改了一点文字

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<input type="text" class="datepicker">
 	<div>
-		wo shi wenzi ya 
+		我改了一点HTML
 	</div>
 	
 	<script type="text/javascript">
